fixed horizontal scrollbar on some browsers

--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,8 @@ body {
   margin: 0;
   background-color: white;
   font-family: "Avenir";
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 #mlh-trust-badge {
@@ -154,6 +156,7 @@ a.anchor {
   display: flex;
   justify-content: space-between;
   /*box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);*/
+  z-index: 9998;
 }
 
 .navbar.content {
@@ -217,7 +220,7 @@ a.anchor {
 }
 
 .splash * {
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .splash #logo-row {
@@ -252,6 +255,7 @@ a.anchor {
   max-width: 400px;
   flex: 1 1 auto;
   margin: 0 auto;
+  z-index: 9999;
 }
 
 .link-button {
